--- a/user_count.html
+++ b/user_count.html
@@ -23,6 +23,10 @@
         th {
             background-color: #f2f2f2;
         }
+        .total-row {
+            font-weight: bold;
+            background-color: #e0e0e0;
+        }
     </style>
     <script>
         // Function to fetch data from the API and update the table
@@ -33,6 +37,8 @@
                     // Clear the existing table body
                     const tableBody = document.getElementById('table-body');
                     tableBody.innerHTML = '';
+
+                    let totalSum = 0; // Initialize total sum
 
                     // Iterate over the data and create rows for the table
                     data.forEach((entry, index) => {
@@ -54,7 +60,29 @@
                         row.appendChild(countCell);
 
                         tableBody.appendChild(row);
+
+                        // Add to total sum
+                        totalSum += parseInt(entry.entry_count, 10);
                     });
+
+                    // Create a total sum row
+                    const totalRow = document.createElement('tr');
+                    totalRow.className = 'total-row';
+
+                    const totalSerialNumberCell = document.createElement('td');
+                    totalSerialNumberCell.textContent = 'Total';
+                    totalRow.appendChild(totalSerialNumberCell);
+
+                    const totalNameCell = document.createElement('td');
+                    totalNameCell.textContent = '';
+                    totalRow.appendChild(totalNameCell);
+
+                    const totalCountCell = document.createElement('td');
+                    totalCountCell.textContent = totalSum; // Display total sum
+                    totalRow.appendChild(totalCountCell);
+
+                    // Append the total sum row to the table body
+                    tableBody.prepend(totalRow); // Add total row at the top
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
