--- a/maintainance.html
+++ b/maintainance.html
@@ -6,6 +6,7 @@
     <title>Maintenance</title>
     <style>
         body {
+            margin-top: 10rem;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -31,6 +32,8 @@
         <h1>We'll Be Back Soon!</h1>
         <p>The app is currently under maintenance for the next some hours.</p>
         <p>Thank you for your patience.</p>
+        <br>
+        <p>Please Don't call any admin.</p>
     </div>
 </body>
 </html>
