--- a/semester5/const.html
+++ b/semester5/const.html
@@ -23,7 +23,17 @@
 <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
 <script src="../assets/js/script.js"></script>
 <style>
- 
+  .question {
+            margin-bottom: 15px;
+        }
+        .answer {
+            display: block;
+            margin-left: 20px;
+        }
+        .correct {
+            color: green;
+            font-weight: bold;
+        }
   </style>
 <body> 
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center mt-2 p-2 mb-2 border-bottom">
@@ -93,6 +103,7 @@
       <hr>
       <marquee>
         <a href="./const_ass.html">Assignment Help</a>
+        <a href="#mcq">Important MCQ Questions</a>
       </marquee>
       <hr>
       <h2>Evolution and Making of the Indian Constitution</h2> <h3>1. Introduction</h3> <p>The Indian Constitution is the supreme law of India, drafted to establish the country's fundamental political principles, framework, and government procedures.</p> <p>It embodies the ideals of justice, liberty, equality, and fraternity, reflecting the aspirations of the Indian people.</p> <h3>2. Colonial Legacy</h3> <p>The Government of India Act 1935 was a significant precursor that laid down a large part of the administrative structure and principles, such as federalism, that were later adopted in the Indian Constitution.</p> <h3>3. The Constituent Assembly</h3> <p>The Constituent Assembly was established under the Cabinet Mission Plan of 1946. The Assembly consisted of members elected from the provinces and princely states.</p> <p>It had 299 members, including prominent leaders like Dr. B.R. Ambedkar, Jawaharlal Nehru, and Sardar Patel, who played key roles in drafting the Constitution.</p> <h3>4. Drafting Process</h3> <p>The Constituent Assembly met for the first time on December 9, 1946, and held 11 sessions over a period of almost three years, with the final session concluding on November 26, 1949.</p> <p>The Drafting Committee, chaired by Dr. B.R. Ambedkar, was responsible for drafting the Constitution. The first draft was presented to the Assembly in February 1948.</p> <h3>5. Key Features of the Indian Constitution</h3> <p>The Indian Constitution is the longest written constitution in the world, containing 395 articles, 12 schedules, and numerous amendments.</p> <p>The Preamble reflects the vision and goals of the Constitution, stating India as a "Sovereign Socialist Secular Democratic Republic."</p> <p>It guarantees Fundamental Rights and Duties to all citizens, alongside the Directive Principles of State Policy, which were inspired by the Irish Constitution.</p> <p>The Constitution provides a federal structure with a strong center, although India is a federal state.</p> <p>It can be amended, allowing it to evolve over time, with provisions to protect its basic structure.</p> <h3>6. Adoption and Enforcement</h3> <p>The Constitution was adopted on November 26, 1949, by the Constituent Assembly.</p> <p>It came into effect on January 26, 1950, a date chosen to commemorate the declaration of Purna Swaraj (complete independence) in 1930.</p> <h3>7. Impact and Legacy</h3> <p>The Constitution established India as a democratic republic with a parliamentary system of government.</p> <p>It provided provisions for the upliftment of socially and economically backward sections of society, including reservations in education and employment.</p> <p>The Constitution maintained legal continuity with British law while introducing new laws to reflect India's aspirations as an independent nation.</p>
@@ -202,8 +213,34 @@ The Indian Constitution, adopted on November 26, 1949, and effective from Januar
 <h3>1. Written and Detailed Constitution</h3> <ul> <li><strong>Comprehensive Document</strong>: The Indian Constitution is one of the lengthiest written constitutions in the world, containing 470 articles, 25 parts, and 12 schedules (as of now).</li> <li><strong>Exhaustive Coverage</strong>: It includes provisions not only for the structure of government but also for the rights of citizens, the powers and functions of various organs of government, and the relationship between the Union and the States.</li> </ul> <h3>2. Blend of Rigidity and Flexibility</h3> <ul> <li><strong>Amendment Process</strong>: The Constitution provides a balance between rigidity and flexibility. Some provisions can be amended by a simple majority in Parliament, while others require a special majority, and certain amendments need ratification by at least half of the State legislatures.</li> <li><strong>Adaptability</strong>: This blend allows the Constitution to be a living document, capable of evolving with changing circumstances while maintaining its core principles.</li> </ul> <h3>3. Federal System with Unitary Bias</h3> <ul> <li><strong>Division of Powers</strong>: India has a federal system of government with a clear division of powers between the Union and the States, outlined in the Seventh Schedule, which includes the Union List, State List, and Concurrent List.</li> <li><strong>Unitary Features</strong>: Despite being federal in nature, the Indian Constitution exhibits a unitary bias in times of emergency, where the central government can assume greater control over the states.</li> </ul> <h3>4. Parliamentary Form of Government</h3> <ul> <li><strong>Democratic Framework</strong>: The Indian Constitution adopts a parliamentary system of government, modeled after the British system, where the executive is accountable to the legislature.</li> <li><strong>Collective Responsibility</strong>: The Prime Minister and the Council of Ministers are collectively responsible to the Lok Sabha, the lower house of Parliament.</li> </ul> <h3>5. Fundamental Rights</h3> <ul> <li><strong>Guarantee of Civil Liberties</strong>: Part III of the Constitution enumerates Fundamental Rights, which are justiciable and enforceable by the courts.</li> <li><strong>Types of Rights</strong>: These include the Right to Equality, Right to Freedom, Right against Exploitation, Right to Freedom of Religion, Cultural and Educational Rights, and the Right to Constitutional Remedies.</li> </ul> <h3>6. Directive Principles of State Policy (DPSPs)</h3> <ul> <li><strong>Guiding Principles</strong>: Part IV of the Constitution contains the Directive Principles of State Policy, which are non-justiciable guidelines for the state to follow in governance.</li> <li><strong>Social Welfare Goals</strong>: DPSPs promote ideals such as the provision of adequate livelihood, equal pay for equal work, the right to work, education, and public assistance, and the protection of the environment.</li> </ul> <h3>7. Fundamental Duties</h3> <ul> <li><strong>Citizen’s Responsibilities</strong>: The Fundamental Duties, added by the 42nd Amendment in 1976, are outlined in Part IVA of the Constitution.</li> <li><strong>Examples</strong>: Duties include respecting the national symbols, safeguarding public property, promoting harmony, and preserving the rich heritage and environment of the country.</li> </ul> <h3>8. Secular State</h3> <ul> <li><strong>No State Religion</strong>: The Indian Constitution declares India as a secular state, meaning that the state does not favor any religion and provides equal treatment to all religions.</li> <li><strong>Freedom of Conscience</strong>: The government does not interfere in religious matters, ensuring freedom of conscience and the right to profess, practice, and propagate any religion.</li> </ul> <h3>9. Independent Judiciary</h3> <ul> <li><strong>Guardian of the Constitution</strong>: The judiciary in India is independent and acts as the guardian and interpreter of the Constitution.</li> <li><strong>Judicial Review</strong>: The power of judicial review allows the courts to declare any law or executive action unconstitutional if it violates the provisions of the Constitution.</li> </ul><h3>10. Single Citizenship</h3> <ul> <li><strong>National Unity</strong>: Unlike many federal countries, India provides for single citizenship. Every citizen, irrespective of the state of their domicile, is recognized as a citizen of India, which promotes national unity and integrity.</li> </ul> <h3>11. Universal Adult Franchise</h3> <ul> <li><strong>Democratic Participation</strong>: The Constitution grants universal adult suffrage, allowing every citizen above the age of 18, regardless of gender, caste, religion, or wealth, to vote in elections.</li> </ul> <h3>12. Emergency Provisions</h3> <ul> <li><strong>Safeguard Mechanisms</strong>: The Constitution includes provisions to deal with emergencies that threaten the security and integrity of the country.</li> <li><strong>Types of Emergencies</strong>: These are classified as National Emergency, State Emergency (President's Rule), and Financial Emergency.</li> <li><strong>Centralized Control</strong>: During emergencies, the federal structure can be altered, with significant powers shifting to the central government.</li> </ul> <h3>13. Special Provisions for Certain States</h3> <ul> <li><strong>Asymmetrical Federalism</strong>: The Constitution makes special provisions for certain states with unique circumstances, such as Jammu and Kashmir (Article 370, now abrogated), and special provisions for the northeastern states (Article 371).</li> </ul> <h3>14. Provision for an Independent Election Commission</h3> <ul> <li><strong>Free and Fair Elections</strong>: The Constitution establishes an independent Election Commission responsible for the conduct of free and fair elections to Parliament, State Legislatures, and the offices of the President and Vice-President.</li> </ul> <h3>15. Provision for Local Governments</h3> <ul> <li><strong>Decentralization of Power</strong>: The Constitution was amended (73rd and 74th Amendments) to include provisions for Panchayats (rural local governments) and Municipalities (urban local governments), ensuring a more decentralized form of governance.</li> </ul> 
 
 
+<br>
+<hr id="mcq">
+Important MCQ Questions
+<hr>
 
+<div id="questions"></div>
 
+    <script>
+        // Fetch the JSON file
+        fetch('../assets/json/const_mcq.json')
+            .then(response => response.json())
+            .then(data => renderQuestions(data.questions))
+            .catch(error => console.error('Error fetching the JSON:', error));
+
+        function renderQuestions(questions) {
+            const questionsContainer = document.getElementById("questions");
+            questions.forEach((question, index) => {
+                let questionElement = `<div class="question"><p>${index + 1}. ${question.question}</p>`;
+                // Loop through options and render them
+                for (let option in question.options) {
+                    let className = option === question.correct_answer ? "correct" : "";
+                    questionElement += `<span class="answer ${className}">${option}. ${question.options[option]}</span>`;
+                }
+                questionElement += `</div>`;
+                questionsContainer.innerHTML += questionElement;
+            });
+        }
+    </script>
       
         </body>
 </html>
