--- a/semester5/index.html
+++ b/semester5/index.html
@@ -114,20 +114,20 @@ function removememe() {
     </div>
   </header>
     <!-- Background Blur -->
-    <!-- <div id="blur_back"></div> -->
+   <div id="blur_back"></div>
 
     <!-- Meme Box Content -->
-    <!-- <div id="meme_box" class="container position-fixed top-50 start-50 translate-middle rounded shadow-lg">
+    <div id="meme_box" class="container position-fixed top-50 start-50 translate-middle rounded shadow-lg">
         <div class="row justify-content-center">
             <div class="col-12">
                 <img id="meme_img" class="img-fluid rounded" alt="Meme Image">
-                 -->
-            <!-- </div><br><center style="font-size: larger;">Meme of the Day</center><br>
+                
+           </div><br><center style="font-size: larger;">Meme of the Day</center><br>
             <div class="col-12 mt-4" >
                 <button class="btn btn-danger" onclick="removememe()">Close</button>
             </div>
         </div>
-    </div> -->
+    </div>
     <div id="body">
       <div class="heading_name">Software technology</div>
       <div id="watermark">@Debuggers</div>
