--- a/dbms.html
+++ b/dbms.html
@@ -33,7 +33,7 @@
         }
     </style>
 </head>
-<body onload="shutdown()">
+<body onload="checkLogin()">
 <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
     <div class="container-fluid">
         <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
