--- a/nouser.html
+++ b/nouser.html
@@ -63,8 +63,9 @@
 
 <div id="body">
     <div class="message-container">
-        <h1>You Are Blocked</h1>
-        <p>You have been blocked from accessing this app. Please contact the admins for further assistance.</p>
+        <h1>You Are Not A user</h1>
+        <p>You are not a user of Helpdesk. For Being a user you have to subscribe first. For subscription you have to contact admins of debuggers or whatsapp to +91 6207753704</p><br>
+        <p>Happy Learning</p>
        
     </div>
 </div>
