--- a/semester5/const.html
+++ b/semester5/const.html
@@ -35,7 +35,7 @@
             font-weight: bold;
         }
   </style>
-<body> 
+<body  onload="waterm()">
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center mt-2 p-2 mb-2 border-bottom">
    <div id="top_bar">
     <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
